<?xml version="1.0"?>
<package format="2">
  <name>bender_nav</name>
  <version>0.4.3</version>
  <description>The bender_nav package</description>

  <maintainer email="viprobotics@boisestate.edu">Wankun Sirichotiyakul</maintainer>
  <author email="nardosashenafi@u.boisestate.edu">Nardos Ashenafi</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>navigation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>map_server</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
